--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,7 @@ fastapi
 uvicorn[standard]
 pydantic
 pandas
-numpy==1.26.4
+numpy
 sentence-transformers
-onnxruntime==1.18.0
+onnxruntime==1.20.0
 scikit-learn
-tensorflow-cpu==2.17.0
